--- a/ProductsMicroService.API/Properties/launchSettings.json
+++ b/ProductsMicroService.API/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5062"
+      "applicationUrl": "http://localhost:5552"
     },
     "https": {
       "commandName": "Project",
@@ -16,7 +16,8 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7136;http://localhost:5062"
+      "applicationUrl": "https://localhost:7136;http://localhost:5552",
+      "launchUrl": "swagger"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
