--- a/ProductsMicroService.API/appsettings.json
+++ b/ProductsMicroService.API/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings":
-  {
+  "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Port=3306; Database=ecommerceproductsdatabase;User ID=root; Password=abcd1234"
   }
 }
